feat: created new api getFriendList, configure RestTemplate for external service setup, and created integration tests